--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #hero {
   height: 800px;
-  background-image: url('images/places/ocean.jpg');
+  background-image: url("images/places/ocean.jpg");
   background-position: center;
   background-size: cover;
 }
@@ -21,7 +21,7 @@
   color: white;
   text-transform: uppercase;
   font-size: 50px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   margin: 0;
 }
 
